tests/parse_print/issues/133/1/stderr.expected
Error:
    tests/parse_print/issues/133/1/133_1.essence:3:8:
unexpected be
expecting colon or comma
    find a be int(1..9)
           ^